update cloudbuild conifg

--- a/helloworld/cloudbuild.yaml
+++ b/helloworld/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
   entrypoint: /bin/sh
   # Run pip install and pytest in the same build step
   # (pip packages won't be preserved in future steps!)
-  args: [-c, 'pip install -r requirements.txt']
+  args: [-c, 'pip install -r requirements.txt && pytest']
   dir: 'helloworld'
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['functions', 'deploy', 'hello_http', '--trigger-http', '--runtime', 'python39', '--region', '$LOCATION']
